site - new test program

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
        <h3>Test program</h3>
+          <p>Click on map to run simulation</p>
           <div id="testGame"></div>
       </section>
     </div>
