site remove  jquery dependencies

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="description" content="Steerjs : The steering managment library on plain javascript" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-      <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="javascripts/pixi.js"></script>
       <script src="javascripts/steerjs.js"></script>
-      <script src="javascripts/main.js"></script>
+      <!--<script src="javascripts/main.js"></script>-->
 
 
     <title>Steerjs</title>
@@ -38,7 +37,9 @@
       <section id="main_content" class="inner">
        <h3>Test program</h3>
           <p>Click on map to run simulation</p>
-          <div id="testGame"></div>
+          <div id="testGame">
+              <script src="javascripts/main.js"></script>
+          </div>
       </section>
     </div>
 
